# fawnfetch

./: CMakeLists.txt  README.md
config/: config.json
image/: test.txt
include/: config-manager.hpp  cpu.hpp  home.hpp  pwd.hpp  shell.hpp  text-config.hpp  user.hpp
src/: config-manager.cpp  main.cpp  text-config.cpp
src/modules/: cpu.cpp  home.cpp  pwd.cpp  shell.cpp  user.cpp
